<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="@drawable/gray_circler"
        android:padding="8dp"
        android:src="@drawable/ef_ic_arrow_back" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ride.RideActivity" />

    <LinearLayout
        android:id="@+id/ll_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:elevation="8dp"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/et_pickup_point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:textColorHint="@android:color/darker_gray"
            android:hint="Masukan Tujuan" />

        <Button
            android:id="@+id/btn_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Order" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_ride"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:elevation="8dp"
        android:orientation="vertical"
        android:padding="16dp"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="24dp">

            <LinearLayout
                android:id="@+id/ll_motor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/gray_circler"
                    android:padding="12dp"
                    android:src="@drawable/ic_baseline_delivery_dining_24" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_15_000_n1_3_min_n1_orang"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="80dp"
                android:layout_height="1dp" />

            <LinearLayout
                android:id="@+id/ll_car"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/gray_circler"
                    android:padding="12dp"
                    android:src="@drawable/ic_baseline_directions_car_24" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_25_000_n3_7_min_n3_4_orang"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_waiting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:elevation="8dp"
        android:orientation="vertical"
        android:padding="16dp"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Sedang mencari driver"
            android:textColor="@color/black"/>

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:layout_marginTop="8dp"/>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ll_pickup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:elevation="8dp"
        android:orientation="vertical"
        android:padding="16dp"
        android:visibility="gone">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_driver_avatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/profile"
            map:layout_constraintStart_toStartOf="parent"
            map:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/driver_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Pewdieplier (12345)"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            map:layout_constraintEnd_toEndOf="parent"
            map:layout_constraintStart_toEndOf="@+id/iv_driver_avatar"
            map:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/driver_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Has arrived at destination"
            android:textColor="@android:color/black"
            map:layout_constraintEnd_toEndOf="parent"
            map:layout_constraintStart_toEndOf="@+id/iv_driver_avatar"
            map:layout_constraintTop_toBottomOf="@+id/driver_name" />

        <Button
            android:id="@+id/btn_detail"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/box_rounded"
            android:text="@string/order_detail"
            android:visibility="gone"
            map:layout_constraintEnd_toEndOf="parent"
            map:layout_constraintHorizontal_bias="1.0"
            map:layout_constraintStart_toEndOf="@+id/iv_driver_avatar"
            map:layout_constraintTop_toBottomOf="@+id/driver_status" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>